/*
 * Copyright (C) 2025 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package android.companion;

option java_multiple_files = true;

// Next index: 2
message TaskContinuityMessage {
    oneof data {
        ContinuityDeviceConnected device_connected = 1;
        RemoteTaskAddedMessage remote_task_added_message = 2;
        RemoteTaskRemovedMessage remote_task_removed = 3;
    }
}

message ContinuityDeviceConnected {
    int32 currentForegroundTaskId = 1;
    repeated RemoteTaskInfo remoteTasks = 2;
}

message RemoteTaskAddedMessage {
    RemoteTaskInfo task = 1;
}

message RemoteTaskInfo {
    int32 id = 1;
    string label = 2;
    int64 lastUsedTimeMillis = 3;
    bytes taskIcon = 4;
}

message RemoteTaskRemovedMessage {
    int32 taskId = 1;
}
